--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section id="home" class="h-screen flex items-center justify-center text-center">
       <div class="max-w-4xl flex flex-col items-center">
-        <img src="../image/telyu.png" alt="Foto Profil Ito" class="w-32 h-32 rounded-full mb-6 border-4 border-gray-800 object-cover">
+        <img src="../image/propil.jpg" alt="Foto Profil Ito" class="w-32 h-32 rounded-full mb-6 border-4 border-gray-800 object-cover">
         <h2 class="text-5xl md:text-7xl font-extrabold text-white leading-tight tracking-tight">
           Muhammad <span class="text-blue-500">Trisucipto</span>
         </h2>
